# scipython

./: .buildinfo  conf.py  genindex.html  index.html  index.md  index.rst  introduction.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/: index.md.txt  introduction.md.txt
_sources/vscode/: extensions.md.txt  extras.md.txt  installation.md.txt  shortcuts.md.txt  why.md.txt
_sources/vscode/setup/: appearance.md.txt  formatting.md.txt  index.md.txt  linelength.md.txt
documentation/: index.html
testing/: index.html
vscode/: extensions.html  extensions.md  extras.html  installation.html  installation.md  settings.html  settings.md  shortcuts.html  why.html
vscode/setup/: appearance.html  environment.html  environment.md  formatting.html  index.html  linelength.html  spellcheck.html  telemetry.html  versioncontrol.html  versioncontrol.md
