[tool.poetry]
name = "scipython"
version = "0.1.0"
description = "Modern tools for scientific Python (tutorials)"
authors = ["Denis Rosset <physics@denisrosset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
myst-nb = "^0.13.2"
sphinx-panels = "^0.6.0"
sphinxcontrib-bibtex = "^2.4.1"
sphinx-book-theme = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
